--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "antd-style": "^3.7.1",
     "dayjs": "^1.11.18",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.4"
   },
   "devDependencies": {
     "@douyinfe/semi-webpack-plugin": "^2.87.0",
